--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Idea</th>
       <th>Time</th>
       <th>Basket</th>
       <th>User</th>
@@ -15,9 +16,10 @@
   <tbody>
     <% @histories.each do |history| %>
       <tr>
+        <td><%= history.idea.topic %></td>
         <td><%= history.time %></td>
-        <td><%= history.basket_id %></td>
-        <td><%= history.user_id %></td>
+        <td><%= history.basket.name %></td>
+        <td><%= history.user.name %></td>
         <td><%= link_to 'Show', history %></td>
         <td><%= link_to 'Edit', edit_history_path(history) %></td>
         <td><%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
