--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -3,27 +3,29 @@
 <h1>Listing Ideas</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Topic</th>
-      <th>Text</th>
-      <th>Basket</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+	<thead>
+		<tr>
+			<th>Proposed by</th>
+			<th>Topic</th>
+			<th>Text</th>
+			<th>Basket</th>
+			<th colspan="3"></th>
+		</tr>
+	</thead>
 
-  <tbody>
-    <% @ideas.each do |idea| %>
-      <tr>
-        <td><%= idea.topic %></td>
-        <td><%= idea.text %></td>
-        <td><%= idea.basket_id %></td>
-        <td><%= link_to 'Show', idea %></td>
-        <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-        <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+	<tbody>
+		<% @ideas.each do |idea| %>
+			<tr>
+				<td><%= idea.histories.first.user.name %></td>
+				<td><%= idea.topic %></td>
+				<td><%= idea.text %></td>
+				<td><%= idea.basket.name %></td>
+				<td><%= link_to 'Show', idea %></td>
+				<td><%= link_to 'Edit', edit_idea_path(idea) %></td>
+				<td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+			</tr>
+		<% end %>
+	</tbody>
 </table>
 
 <br>
