Revert "Merge branch 'MS-1-1-Create-Idea' into integration"
This reverts commit e3d6ed246d5bcbf5d92142e2a7e47464d3be3006, reversing
changes made to 1498926f9cbc30a413ba01027db4341572217bdf.

--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -5,7 +5,6 @@
 <table>
   <thead>
     <tr>
-      <th>Idea</th>
       <th>Time</th>
       <th>Basket</th>
       <th>User</th>
@@ -16,10 +15,9 @@
   <tbody>
     <% @histories.each do |history| %>
       <tr>
-        <td><%= history.idea.topic %></td>
         <td><%= history.time %></td>
-        <td><%= history.basket.name %></td>
-        <td><%= history.user.name %></td>
+        <td><%= history.basket_id %></td>
+        <td><%= history.user_id %></td>
         <td><%= link_to 'Show', history %></td>
         <td><%= link_to 'Edit', edit_history_path(history) %></td>
         <td><%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
