--- a/app/views/histories/_form.html.erb
+++ b/app/views/histories/_form.html.erb
@@ -12,16 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :time %><br>
-    <%= f.datetime_select :time %>
-  </div>
-  <div class="field">
     <%= f.label :basket_id %><br>
     <%= f.text_field :basket_id %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.label :idea_id %><br>
+    <%= f.text_field :idea_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
