--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -17,12 +17,12 @@
   </div>
   <div class="field">
     <%= f.label :text %><br>
-    <%= f.text_field :text %>
+    <%= f.text_area :text %>
   </div>
-  <div class="field">
+  <!--<div class="field">
     <%= f.label :basket_id %><br>
     <%= f.text_field :basket_id %>
-  </div>
+  </div>-->
   <div class="actions">
     <%= f.submit %>
   </div>
