--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,31 +1,86 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Ideas</h1>
+</div>
 
-<table>
+<!--<table>
   <thead>
     <tr>
       <th>Topic</th>
       <th>Text</th>
       <th>Basket</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
-  </thead>
-
-  <tbody>
+  </thead>-->
+  
+  <!--<tbody>
     <% @ideas.each do |idea| %>
+    
       <tr>
         <td><%= idea.topic %></td>
         <td><%= idea.text %></td>
         <td><%= idea.basket_id %></td>
+        <td><button type="button" class="btn btn-default btn-default"><span class="glyphicon glyphicon-thumbs-up"></i></button></td>
+        <td><button type="button" class="btn btn-default btn-default"><span class="glyphicon glyphicon-thumbs-down"></i></button></td>
         <td><%= link_to 'Show', idea %></td>
         <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
         <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
-</table>
+
+
+  
+</table>-->
+  <% @ideas.each do |idea| %>
+  <div class="container">
+    <div class="panel-group">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="up_down">
+              <button type="button" class="btn btn-success btn-default"><span class="glyphicon glyphicon-thumbs-up">23</i></button>
+              <%= idea.likes.length %>
+              <button type="button" class="btn btn-danger btn-default"><span class="glyphicon glyphicon-thumbs-down">15</i></button>
+          </div>
+          <h4 class="panel-title">
+            <a data-toggle="collapse" href="#collapse<%= idea.id %>"><%= idea.topic %></a>
+          </h4>
+          <p>User Name - <%= idea.created_at.strftime('%d.%m.%Y %H:%M ') %></p>
+        </div>
+        <div id="collapse<%= idea.id %>" class="panel-collapse collapse">
+          <div class="panel-body">
+            <p><%= idea.text %></p>
+          </div>
+          <div class="panel-footer">
+            <div class="panel-group">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" href="#collapse<%= idea.id + @ideas.count %>">Comments (<%= idea.comments.count %>)</a>
+                  </h4>
+                </div>
+                <div id="collapse<%= idea.id + @ideas.count %>" class="panel-collapse collapse">
+                  <% idea.comments.each do |comment| %>
+                    <div class="panel-body">
+                      <p>User Name - <%= comment.time.strftime('%d.%m.%Y %H:%M ') %></p>
+                      <div class="panel-footer">
+                        <p><%= comment.text %></p>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <% end %>
+
 
 <br>
 
 <%= link_to 'New Idea', new_idea_path %>
+
