Adding comments & redirects work

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.label :text %><br>
     <%= f.text_field :text %>
   </div>
-  <div class="field">
+  <div hidden class="field">
     <%= f.label :idea_id %><br>
     <%= f.text_field :idea_id %>
   </div>
