--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -4,4 +4,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', comments_path %>
+<!-- <%= link_to 'Back', comments_path %> -->
+<%= link_to 'Back', idea_path(:id => params[:id]) %>
