--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -5,6 +5,12 @@
   <%= @idea.topic %>
 </p>
 
+<p>  
+  <%= current_user.name %>
+  <br>
+  <%= @idea.created_at %>
+</p>
+
 <p>
   <strong>Text:</strong>
   <%= @idea.text %>
@@ -15,17 +21,34 @@
   <%= @idea.basket_id %>
 </p>
 
+<table>
+  <thead>
+    <tr>
+      <th>User</th>
+      <th>Time</th>
+      <th>Text</th>      
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
 
 
 <p>
+  <tbody>
 	<% @idea.comments.each do |comment| %>
-	<%= comment.text %>
+	  <tr>
+	  	<td><%= comment.user.name %></td>
+        <td><%= comment.time %></td>
+        <td><%= comment.text %></td>        
+	  <tr>
 	<% end %>
+  </tbody>
+</table>
 </p>
 
-
+<p>
 <%= link_to 'Edit', edit_idea_path(@idea) %> |
 <%= link_to 'Back', ideas_path %> |
-<%= link_to 'New Comment', new_comment_path %>
-
+<%= link_to 'New Comment', {:controller => 'comments', :action => 'new', :id => @idea} %>
+</p>
 
