Add link to comment

--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -39,7 +39,8 @@
 	  <tr>
 	  	<td><%= comment.user.name %></td>
         <td><%= comment.time %></td>
-        <td><%= comment.text %></td>        
+        <td><%= comment.text %></td>
+        <td><%= link_to 'Show', comment %></td>
 	  <tr>
 	<% end %>
   </tbody>
