Revert "Merge branch 'JS-1-Add-comments' into integration"
This reverts commit 018d727a25db3142374978450685cb3593770055, reversing
changes made to bdc779d6512f1ea0646838aa502c52242ca8ca50.

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id %>
+  </div>
+  <div class="field">
     <%= f.label :time %><br>
     <%= f.datetime_select :time %>
   </div>
@@ -19,7 +23,7 @@
     <%= f.label :text %><br>
     <%= f.text_field :text %>
   </div>
-  <div hidden class="field">
+  <div class="field">
     <%= f.label :idea_id %><br>
     <%= f.text_field :idea_id %>
   </div>
