--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,8 +1,5 @@
 <h1>New Comment</h1>
 
-
-
 <%= render 'form' %>
 
-<!-- <%= link_to 'Back', comments_path %> -->
-<%= link_to 'Back', idea_path(:id => params[:id]) %>
+<%= link_to 'Back', comments_path %>
