Revert "Revert "Merge branch 'MS-1-8-Publish-Idea' into integration""
This reverts commit bdc779d6512f1ea0646838aa502c52242ca8ca50.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
 <% if not session[:user_id].nil? %>
 	  <p><%= User.find(session[:user_id]).name %> signed in</p>
 	  <% end %>
+	  <br>
+	  <%= link_to 'New ideas', ideas_path(basket: "New" )%>
+	  <%= link_to 'Approved ideas', ideas_path(basket: "Approved" )%>
+	  <%= link_to 'Changing ideas', ideas_path(basket: "Changing" )%>
+	  <%= link_to 'Approved ideas', ideas_path(basket: "Changed" )%>
+	  <%= link_to 'Approved ideas', ideas_path(basket: "Not changed" )%>
+	  <%= link_to 'Rejected ideas', ideas_path(basket: "Rejected" )%>
+
 <%= yield %>
 
 </body>
