--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -8,7 +8,7 @@
       <th>Topic</th>
       <th>Text</th>
       <th>Basket</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -17,10 +17,17 @@
       <tr>
         <td><%= idea.topic %></td>
         <td><%= idea.text %></td>
-        <td><%= idea.basket_id %></td>
-        <td><%= link_to 'Show', idea %></td>
+        <td><%= idea.basket.name %></td>
+	<th><% if idea.basket.name=='New' %>
+		<td>
+			<%= link_to "publish", publish_idea_path(idea), method: :post, class: "btn btn-primary" %>
+		</td>
+	<% end %>	
+	</th>
+
+	<!-- <td><%= link_to 'Show', idea %></td>
         <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-        <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
