Revert "Revert "Merge branch 'JS-1-Add-comments' into integration""
This reverts commit 00a833129a40ff24e0bd03e0752e324bef698452.

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New Comment</h1>
 
+
+
 <%= render 'form' %>
 
-<%= link_to 'Back', comments_path %>
+<!-- <%= link_to 'Back', comments_path %> -->
+<%= link_to 'Back', idea_path(:id => params[:id]) %>
