--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,10 +12,6 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="field">
     <%= f.label :time %><br>
     <%= f.datetime_select :time %>
   </div>
@@ -23,7 +19,7 @@
     <%= f.label :text %><br>
     <%= f.text_field :text %>
   </div>
-  <div class="field">
+  <div hidden class="field">
     <%= f.label :idea_id %><br>
     <%= f.text_field :idea_id %>
   </div>
