--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,54 +1,104 @@
 <div class="container">
-<p id="notice"><%= notice %></p>
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Ideas</h1>
+  <div class="row">
+    <div class="col-sm-10">
+      <h1>Listing Ideas</h1>
+    </div>
+    <div class="col-sm-2">
+      <button type="button" class="btn btn-primary"><%= link_to 'Post Idea', new_idea_path %></button>
+    </div>
+  </div>
+  <!-- Example of baskets -->
+
+  <ul class="nav nav-tabs nav-justified">
+    <% baskets = Basket.all %>
+    <% baskets.each do |basket| %>
+      <%if basket.name == "New" or basket.name == "Rejected"
+          %><%
+        else %>
+          <li role="presentation">
+            <a href="">
+              <%= basket.name %>
+            </a>
+          </li>
+        <%end
+      %>
+      <!--<li role="presentation">
+        <a href="">
+          <%= basket.name %>
+        </a>
+      </li>-->
+    <% end %>
+  </ul>
+  <!-- End of example -->
+  
+  <!-- Example of mods baskets -->
+  <!--
+  <ul class="nav nav-tabs nav-justified">
+    <li role="presentation" class="active"><a href="">New</a></li>
+    <li role="presentation"><a href="">Approved</a></li>
+    <li role="presentation"><a href="">Rejected</a></li>
+    <li role="presentation"><a href="">Changing</a></li>
+    <li role="presentation"><a href="">Has changed</a></li>
+    <li role="presentation"><a href="">Not changed</a></li>
+  </ul>
+  -->
+  <!-- End of example -->
+
+  <div class="center tags">
+    <% tags = Tag.all %>
+    <% tags.each do |menutag| %>
+      <label class="checkbox-inline"><input type="checkbox" value="">
+      <%= menutag.text %>
+      </label>
+    <% end %>
+  </div>
 </div>
 
-<!--<table>
-  <thead>
-    <tr>
-      <th>Topic</th>
-      <th>Text</th>
-      <th>Basket</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>-->
-  
-  <!--<tbody>
-    <% @ideas.each do |idea| %>
-    
-      <tr>
-        <td><%= idea.topic %></td>
-        <td><%= idea.text %></td>
-        <td><%= idea.basket_id %></td>
-        <td><button type="button" class="btn btn-default btn-default"><span class="glyphicon glyphicon-thumbs-up"></i></button></td>
-        <td><button type="button" class="btn btn-default btn-default"><span class="glyphicon glyphicon-thumbs-down"></i></button></td>
-        <td><%= link_to 'Show', idea %></td>
-        <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-        <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-
-
-  
-</table>-->
   <% @ideas.each do |idea| %>
   <div class="container">
     <div class="panel-group">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <div class="up_down">
-              <button type="button" class="btn btn-success btn-default"><span class="glyphicon glyphicon-thumbs-up">23</i></button>
-              <%= idea.likes.length %>
-              <button type="button" class="btn btn-danger btn-default"><span class="glyphicon glyphicon-thumbs-down">15</i></button>
+          <div class="row">
+            <div class="col-sm-9">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" href="#collapse<%= idea.id * 2 %>"><%= idea.topic %></a>
+              </h4>
+              <p><%= User.find(idea.histories.first.user_id).name %> - <%= idea.created_at.strftime('%d.%m.%Y %H:%M ') %></p>
+              <p>Tagit: 
+              <% idea.tags.each do |tag| %>
+                <%= if tag == nil
+                    
+                  else
+                    tag.text
+                  end
+                %>
+              <% end %>
+              </p>
+            </div>
+            <div class="<up_down. col-sm-3 center">
+              <% likes = 0 %>
+              <% dislikes = 0 %>
+              <% idea.likes.each do |like| %>
+                <% a = Like.find(idea.id).like_type() 
+                    if a == 'like'
+                      likes = likes + 1
+                    else
+                      dislikes = dislikes + 1
+                    end
+                %>
+              <% end %>
+              <span class="total-likes">
+                <%= likes - dislikes %>
+              </span><br>
+              <button type="button" class="btn btn-success btn-md"><span class="glyphicon glyphicon-thumbs-up"></span> <%= likes %></button>
+              <button type="button" class="btn btn-danger btn-md"><span class="glyphicon glyphicon-thumbs-down"></span> <%= dislikes %></button>
+            </div>
           </div>
-          <h4 class="panel-title">
-            <a data-toggle="collapse" href="#collapse<%= idea.id %>"><%= idea.topic %></a>
-          </h4>
-          <p>User Name - <%= idea.created_at.strftime('%d.%m.%Y %H:%M ') %></p>
         </div>
-        <div id="collapse<%= idea.id %>" class="panel-collapse collapse">
+        <div id="collapse<%= idea.id * 2 %>" class="panel-collapse collapse">
           <div class="panel-body">
             <p><%= idea.text %></p>
           </div>
@@ -57,20 +107,32 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#collapse<%= idea.id + @ideas.count %>">Comments (<%= idea.comments.count %>)</a>
+                    <a data-toggle="collapse" href="#collapse<%= idea.id * 2 +1 %>">Comments (<%= idea.comments.count %>)</a>
                   </h4>
                 </div>
-                <div id="collapse<%= idea.id + @ideas.count %>" class="panel-collapse collapse">
+                <div id="collapse<%= idea.id * 2 + 1 %>" class="panel-collapse collapse">
                   <% idea.comments.each do |comment| %>
                     <div class="panel-body">
-                      <p>User Name - <%= comment.time.strftime('%d.%m.%Y %H:%M ') %></p>
+                      <p><%= User.find(comment.user_id).name %> - <%= comment.time.strftime('%d.%m.%Y %H:%M ') %></p>
                       <div class="panel-footer">
                         <p><%= comment.text %></p>
                       </div>
                     </div>
                   <% end %>
+                  <div class="panel-body">
+                    <div class="form-group">
+                      <label for="comment">Comment:</label>
+                      <textarea class="form-control" rows="5" id="comment"></textarea>
+                      <button type="button" class="btn btn-primary">Lähetä</button>
+                    </div>
+                  </div>
                 </div>
               </div>
+            </div>
+            <div class="center">
+              <a data-toggle="collapse" href="#collapse<%= idea.id * 2 %>">
+                <span class="glyphicon glyphicon glyphicon-menu-up"></span>
+              </a>
             </div>
           </div>
         </div>
