Fixed show comment back link

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -20,6 +20,8 @@
   <%= @comment.idea_id %>
 </p>
 
+
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Back', idea_path(:id => params[:id]) %>
+<!-- <%= link_to 'Back', comments_path %> -->
 
