--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -22,6 +22,6 @@
 
 
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', idea_path(:id => params[:id]) %>
-<!-- <%= link_to 'Back', comments_path %> -->
+<%= link_to 'Back', idea_path(@comment.idea) %>
+
 
