--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -39,8 +39,8 @@
     <tr>
       <td><%= comment.user.name %></td>
       <td><%= comment.time %></td>
-      <td><%= comment.text %></td>
-      <td><%= link_to 'Show', {:controller => 'comments', :action => 'show', :idea_id => @idea} %></td>
+      <td><%= comment.text %></td>    
+      <td><%= link_to 'Show', comment %></td>
     <tr>
   <% end %>
   </tbody>
