--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -103,18 +103,22 @@
                       <a href="">
                         <i class="glyphicon glyphicon-flag flag"></i>
                       </a>
-                      <p><%= User.find(comment.user_id).name %> - <%= comment.time.strftime('%d.%m.%Y %H:%M ') %></p>
+                      <p><%= comment.user.name %> - <%= comment.time.strftime('%d.%m.%Y %H:%M ') %></p>
                       <div class="panel-footer">
                         <p><%= comment.text %></p>
                       </div>
                     </div>
                   <% end %>
                   <% if not session[:user_id].nil? %>
-                    <div class="panel-body">
-                      <div class="form-group">
-                        <!--<label for="comment">Comment:</label>
-                        <textarea class="form-control" rows="5" id="comment"></textarea>
-                        <button type="button" class="btn btn-primary">Send</button>-->
+			  <%= form_for("comment", :url => main_app.comments_path, :html => { :class => "form-horizontal" } ) do |f| %>
+				  <%= f.hidden_field :idea_id, :value => idea.id %>
+				  <%= f.hidden_field :time, :value => Time.now %>
+				  <div class="panel-body">
+					  <div class="form-group" method="post" action="comment/new">
+						  <label for="comment">Comment:</label>
+						  <%= f.text_field :text,class: "form-control", rows: "5", id: "comment"%>
+						  <button type="submit" class="btn btn-primary">Send </button>
+					  <% end %>
                       </div>
                     </div>
                   <% end %>
