Add demo test data, show comment fixes..

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @comment.user_id %>
+  <%= @comment.user.name %>
 </p>
 
 <p>
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Idea:</strong>
-  <%= @comment.idea_id %>
+  <%= @comment.idea.topic %>
 </p>
 
 
