--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,6 +24,11 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.title %></td>
+
+	<td>
+		<%= link_to 'Impersonate',  session_path(:persistent_id user.persistent_id), method: :post  %>
+	</td>
+
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
