--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,8 @@
         <td><%= user.title %></td>
 
 	<td>
-		<%= link_to 'Impersonate',  session_path(:persistent_id user.persistent_id), method: :post  %>
+		
+    <%= link_to 'Impersonate', new_session_path(:persistent_id => user.persistent_id) %>
 	</td>
 
         <td><%= link_to 'Show', user %></td>
