--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -95,7 +95,7 @@
               </div>
               <div class="col-sm-3 histories">
                 <% idea.histories.each do |history|%>
-                  <p><strong>Created:</strong><br>
+                  <p><strong><%=history.basket.name%>:</strong><br>
                   <%= history.created_at.strftime('%d.%m.%Y %H:%M ') %></p>
                 <% end %>
               </div>
