--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -16,7 +16,7 @@
     <% @histories.each do |history| %>
       <tr>
         <td><%= history.time %></td>
-        <td><%= history.basket.name %></td>
+        <td><%= history.basket %></td>
         <td><%= history.user.name %></td>
         <td><%= link_to 'Show', history %></td>
         <td><%= link_to 'Edit', edit_history_path(history) %></td>
