--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -6,9 +6,11 @@
     <div class="col-sm-10">
       <h1>Listing Ideas</h1>
     </div>
+    <% if current_user %>
     <div class="col-sm-2">
         <%= link_to 'Post Idea', new_idea_path, :class => 'btn btn-primary'%>
     </div>
+    <% end %>
   </div>
 
   <!-- Show tags -->
