--- a/app/views/ideas/_edit_ideas_tags.html.erb
+++ b/app/views/ideas/_edit_ideas_tags.html.erb
@@ -12,19 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :topic %><br>
-    <%= f.text_field :topic, :class => "form-control"  %>
-  </div>
-  <div class="field">
-    <%= f.label :text %><br>
-    <%= f.text_area :text, :class => "form-control", :rows => "5" %>
-  </div>
-
-  <div class="field">
     <%= f.label :tags %><br>
       <% if Tag.all.each do |menutag| %>
-        <%= check_box_tag 'idea[tags][]', menutag.text%>
-        <%= menutag.text %>
+        <% @idea.tags.each do |t| %>
+          <% if t.text == menutag.text %>
+            <%= check_box_tag 'idea[tags][]', menutag.text, true%>
+          <% else %>
+            <%= check_box_tag 'idea[tags][]', menutag.text%>
+          <%end%>
+          <%= menutag.text %>
+        <%end%>
       <%end%>
     <% end %>
   </div>
