--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -64,11 +64,21 @@
                   </div>
                 <% end %>
               <% end %>
-              <% if not (idea.histories.last.basket == "New" or idea.histories.last.basket == "Rejected")%>
-                <button type="button" class="btn btn-success btn-md"><span class="glyphicon glyphicon-thumbs-up"></span>
-                  <%= idea.likes.length %>
-                </button>
-              <% end %>
+	      <% if not (idea.histories.last.basket == "New" or idea.histories.last.basket == "Rejected")%>
+
+		      <% if idea.likes.find_by(user_id: current_user).nil? %>
+			      <%= link_to like_idea_path(idea), :class => 'btn btn-default', method: :post do %>
+				      <span class="glyphicon glyphicon-thumbs-up"></span>
+				      <%= idea.likes.length %>
+			      <% end %>	
+		      <% else %>
+			      <%= link_to unlike_idea_path(idea), :class => 'btn btn-success', method: :post do %>
+				      <span class="glyphicon glyphicon-thumbs-up"></span>
+				      <%= idea.likes.length %>
+			      <% end %>
+
+		      <% end %>
+	      <% end %>
             </div>
             <!-- End likes and basket controls-->
           </div>
