Show who has moved idea between baskets

--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -83,8 +83,16 @@
               <!-- End idea text -->
               <div class="col-sm-3 histories">
                 <% idea.histories.each do |history|%>
-                  <p><strong><%=history.basket%>:</strong><br>
-                  <%= history.time.strftime('%d.%m.%Y %H:%M ') %></p>
+                  <p>
+                    <strong><%=history.basket%></strong>:<br>
+                    <%= history.time.strftime('%d.%m.%Y %H:%M ') %><br>
+                    <% if not history.basket == 'New' %>
+                      <%= history.user.name %>
+                      <% if not history.user.title.empty? and history.user.moderator %>
+                        (<%= history.user.title %>)
+                      <% end %>
+                    <% end %>
+                  </p>
                 <% end %>
               </div>
             </div>
