Fix link to Not Changed basket in nabvar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	  <%= link_to 'Approved ideas', ideas_path(basket: "Approved" )%>
 	  <%= link_to 'Changing ideas', ideas_path(basket: "Changing" )%>
 	  <%= link_to 'Approved ideas', ideas_path(basket: "Changed" )%>
-	  <%= link_to 'Approved ideas', ideas_path(basket: "Not changed" )%>
+	  <%= link_to 'Approved ideas', ideas_path(basket: "Not Changed" )%>
 	  <%= link_to 'Rejected ideas', ideas_path(basket: "Rejected" )%>-->
 
 <%= yield %>
