--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -73,6 +73,9 @@
 			<%= link_to idea, :class => 'btn btn-primary' do %>
 				<span class="glyphicon glyphicon-share"></span>
 			<% end %>
+                <%= link_to idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
+                  <span class="glyphicon glyphicon-share"></span>
+                <% end %>
 		<% end %>	
 	<% else %>
 		<%= link_to unlike_idea_path(idea), :class => 'btn btn-success', method: :post do %>
@@ -81,6 +84,9 @@
 			<%= link_to idea, :class => 'btn btn-primary' do %>
 				<span class="glyphicon glyphicon-share"></span>
 			<% end %>
+                <%= link_to idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
+                  <span class="glyphicon glyphicon-share"></span>
+                <% end %>
 		<% end %>
 
 	<% end %>
