Test show idea button

--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -70,7 +70,7 @@
                 </button>
               <% end %>
               <% if not (idea.histories.last.basket == "New" or idea.histories.last.basket == "Rejected")%>
-                <%= link_to idea, :class => 'btn btn-primary' do %>
+                <%= link_to idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
                   <span class="glyphicon glyphicon-share"></span>
                 <% end %>
               <% end %>
